# cw-croncat

./: .gitignore  .pre-commit-config.yaml  .rusty-hook.toml  Cargo.toml  DEPLOY.md  NOTICE  README.md  build-and-run.sh  build.sh  checksum  deploy_mainnet.sh  deploy_testnet_example.sh  justfile  quick-reference.md  schema.sh  schema_and_codegen.sh  test.sh
.cargo/: config
bk/: .gitmodules  checksum  justfile
ci/: local_config.yaml  test_accounts.json
ci/daodao-versioner-gas-debug/: Cargo.toml
ci/daodao-versioner-gas-debug/src/: helpers.rs  main.rs  types.rs
ci/gas-benchmark/: Cargo.toml
ci/gas-benchmark/src/: helpers.rs  main.rs  report.rs  test_cases.rs  test_cases_with_queries.rs  test_cases_with_rules.rs  types.rs
contracts/croncat-agents/: Cargo.toml  README.md
contracts/croncat-agents/examples/: schema.rs
contracts/croncat-agents/manifests/: regular-Cargo.toml
contracts/croncat-agents/schema/: croncat-agents.json
contracts/croncat-agents/src/: balancer.rs  contract.rs  distributor.rs  distro.rs  error.rs  external.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/croncat-agents/src/tests/: agent_tests.rs  balancer.rs  common.rs  contract.rs  contracts.rs  distributor.rs  mod.rs
contracts/croncat-factory/: Cargo.toml  README.md
contracts/croncat-factory/examples/: schema.rs
contracts/croncat-factory/manifests/: regular-Cargo.toml
contracts/croncat-factory/schema/: croncat-factory.json
contracts/croncat-factory/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/croncat-factory/src/tests/: contract_tests.rs  contracts.rs  factory_tests.rs  helpers.rs  mod.rs
contracts/croncat-manager/: Cargo.toml  README.md
contracts/croncat-manager/examples/: schema.rs
contracts/croncat-manager/manifests/: regular-Cargo.toml  workspaces-Cargo.toml
contracts/croncat-manager/schema/: croncat-manager.json
contracts/croncat-manager/src/: balances.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/croncat-manager/src/tests/: contract_tests.rs  contracts.rs  helpers.rs  manager_tests.rs  mod.rs  query_transform_tests.rs
contracts/croncat-tasks/: Cargo.toml  README.md
contracts/croncat-tasks/examples/: schema.rs
contracts/croncat-tasks/manifests/: regular-Cargo.toml
contracts/croncat-tasks/schema/: croncat-tasks.json
contracts/croncat-tasks/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/croncat-tasks/src/tests/: common.rs  contract_tests.rs  contracts.rs  helpers.rs  helpers_tests.rs  mod.rs  task_tests.rs
contracts/cw-croncat/: Cargo.toml
contracts/cw-croncat/examples/: schema.rs
contracts/cw-croncat/schema/: execute_msg.json
contracts/cw-croncat/scripts/: build.sh  deploy_testnet_example.sh  init_variables_testnet.sh  instantiate_mainnet.sh  local_balances.sh  local_init_vars.sh  local_start.sh  mainnet_deploy.sh  mainnet_instantiate.sh  query_agents_testnet.sh  register_agent_and_call_testnet.sh  testnet_create_addresses.sh  testnet_create_recurring_task.sh  testnet_create_staking_task.sh  testnet_deploy.sh  testnet_get_agent_ids.sh  testnet_get_agent_tasks.sh  testnet_get_contract_info.sh  testnet_get_tasks.sh  testnet_init_vars.sh  testnet_query_agents.sh  testnet_reg_and_proxy_call.sh  testnet_unregister_agent.sh
contracts/cw-croncat/src/: agent.rs  balancer.rs  contract.rs  error.rs  helpers.rs  lib.rs  manager.rs  msg.rs  owner.rs  receiver.rs  slots.rs  state.rs  tasks.rs  traits.rs
contracts/cw-croncat/src/tests/: agent.rs  balance.rs  balancer.rs  contract.rs  helpers.rs  manager.rs  mod.rs  owner.rs  receiver.rs  slots.rs  state.rs  tasks.rs
contracts/cw-rules/: Cargo.toml
contracts/cw-rules/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  tests.rs  types.rs
contracts/cw-rules/src/tests/: balance.rs  daodao.rs  generic.rs  helpers.rs  mod.rs  nft.rs  smart.rs
contracts/mod-balances/: Cargo.toml  README.md
contracts/mod-balances/examples/: schema.rs
contracts/mod-balances/manifests/: regular-Cargo.toml
contracts/mod-balances/schema/: croncat-mod-balances.json
contracts/mod-balances/src/: contract.rs  error.rs  lib.rs  msg.rs  types.rs
contracts/mod-balances/src/tests/: balance_comparator.rs  get_balances.rs  helpers.rs  mod.rs
contracts/mod-dao/: Cargo.toml  README.md
contracts/mod-dao/examples/: schema.rs
contracts/mod-dao/manifests/: regular-Cargo.toml  workspaces-Cargo.toml
contracts/mod-dao/schema/: croncat-mod-dao.json
contracts/mod-dao/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  types.rs
contracts/mod-dao/src/tests/: has_new_proposals.rs  helpers.rs  mod.rs  passed_proposals.rs  proposal_status.rs  proposals_with_migration.rs
contracts/mod-generic/: Cargo.toml  README.md
contracts/mod-generic/examples/: schema.rs
contracts/mod-generic/manifests/: regular-Cargo.toml
contracts/mod-generic/schema/: croncat-mod-generic.json
contracts/mod-generic/src/: contract.rs  helpers.rs  lib.rs  msg.rs  types.rs  value_ordering.rs
contracts/mod-generic/src/tests/: generic_query.rs  helpers.rs  mod.rs  mod_generic_tests.rs  path_to_value.rs  value_ordering.rs
examples/: schema.rs
integration-sdk/croncat-errors-macro/: Cargo.toml  README.md
integration-sdk/croncat-errors-macro/src/: lib.rs
integration-sdk/croncat-integration-testing/: Cargo.toml  README.md
integration-sdk/croncat-integration-testing/src/: contracts.rs  lib.rs  test_helpers.rs
integration-sdk/croncat-integration-utils/: Cargo.toml  README.md
integration-sdk/croncat-integration-utils/src/: cosmwasm_storage_helpers.rs  error.rs  handle_incoming_task.rs  lib.rs  reply_handler.rs  task_creation.rs  types.rs
schema/: config.json  config_response.json  croncat.json  execute_msg.json  instantiate_msg.json  query_msg.json
scripts/: cargo-build.sh  cw-rules_deploy_testnet.sh  deploy-task-with-rules.sh  optimized-build.sh  publish.sh  schema.sh  set-manifests-regular.sh  set-manifests-workspaces.sh  set_version.sh  task_with_rules.sh  test.sh  update-checksum-m1.sh  update-checksum.sh
src/: agent.rs  contract.rs  error.rs  lib.rs  (+9 more)
(+201 files in other folders)
