[workspace]
members = [
  "contracts/cw-croncat",
  "contracts/cw-rules",
  "packages/cw-croncat-core",
  "packages/generic-query",
  "packages/cw-rules-core",
  "packages/smart-query",
  "ci/gas-benchmark",
]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.package]
version = "0.0.3"
authors = ["meow@cron.cat", "@tjtc", "@mikedotexe","@NinoLipartiia","@Buckram123","deveusss"]
edition = "2021"
description = "Croncat provides a general purpose, fully autonomous network that enables scheduled function calls for blockchain contract execution. It allows any application to schedule logic to get executed in the future, once or many times, triggered by an approved “agent,” in an economically stable format."
documentation = "https://docs.cron.cat/"

[workspace.dependencies]
schemars = "0.8"
serde = { version = "1.0" }
cosmwasm-std = { version = "1.0.0" }
serde-cw-value = "0.7.0"
generic-query = { version = "0.1.1", path = "./packages/generic-query" }
thiserror = { version = "1.0" }
cosmwasm-schema = { version = "1.0.0" }
rusty-hook = "0.11.2"
#For some reason it tries to deploy cw_core here
# voting = { version = "0.2.0", default-features = false, git = "https://github.com/DA0-DA0/dao-contracts" }
smart-query = { version = "0.1.0", path = "./packages/smart-query" }
cw20 = { version = "0.13.4" }
cw-multi-test = { version = "0.16.0" }
cw20-base = { version = "0.13.4", features = ["library"] }
cw-rules-core = { version = "0.1.2", path = "./packages/cw-rules-core" }
cw-storage-plus = "0.16.0"
cron_schedule = "0.2.3"
cw2 = "0.16.0"
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
serde-json-wasm = { version = "0.5.0" }
cw-utils = "0.13.4"
cw721 = "0.15.0"
# DAO contracts
cwd-voting = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cwd-proposal-single = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-proposal-multiple = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-voting-cw20-staked = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cw20-stake = { version = "0.2.6", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-core = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-interface = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
# Testing generic msg
cw4 = "0.16.0"
cw4-group = "0.16.0"
base64 = "0.13.0"
serde_json = { version = "1.0" }
anyhow = "1"
cw-rules = { version = "*", path = "./contracts/cw-rules" }
cw-croncat-core = { version = "0.1.5", path = "./packages/cw-croncat-core" }
cw721-base = "0.15.0"

[workspace.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""
