[package]
name = "daodao-versioner-gas-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc = "2.6"
anyhow = "1.0"
cosmwasm-std = { version = "1.1.2", features = ["staking"] }
serde_json = "1.0"
serde = "1.0"
env_logger = "0.9.0"

cw20-base = "0.13"
cw20 = "0.13"
cw-croncat-core = { version = "*", path = "../../packages/cw-croncat-core" }
cw-rules-core = { version = "*", path = "../../packages/cw-rules-core" }
cw-croncat = { version = "*", path = "../../contracts/cw-croncat" }
cw-daodao-versioner = { version = "*", path = "../../contracts/cw-daodao-versioner" }

cw-code-id-registry = { version = "0.1.0", git = "https://github.com/DA0-DA0/code-id-registry" }
