[package]
name = "gas-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosm-orc = "2.6"
anyhow = "1.0"
cosmwasm-std = "1.1.2"
serde_json = "1.0"
serde = "1.0"
env_logger = "0.9.0"

cw-croncat-core = { version = "*", path = "../../packages/cw-croncat-core" }
cw-rules-core = { version = "*", path = "../../packages/cw-rules-core" }
