[package]
name = "croncat-agents"
version = "0.1.0"
authors = []
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
croncat-sdk-agents = { workspace = true }
croncat-sdk-tasks = { workspace = true }
croncat-sdk-core = { workspace = true }
croncat-sdk-manager = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
cw2 = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
croncat-manager = { workspace = true }
croncat-tasks = { workspace = true }
croncat-factory = { workspace = true }
croncat-sdk-factory={workspace=true}