[package]
name = "croncat-factory"
version = "1.0.0"
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"
description = "CronCat factory smart contract"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }
cw2 = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
croncat-sdk-core = { version = "1.0.0" }
croncat-sdk-factory = { version = "1.0.0" }

[dev-dependencies]
cw-multi-test = { workspace = true }
croncat-tasks = { version = "1.0.0" }
croncat-manager = { version = "1.0.0" }
croncat-agents = { version = "1.0.0" }
croncat-mod-balances = { version = "1.0.0" }
croncat-sdk-core = { version = "1.0.0" }
croncat-sdk-factory = { version = "1.0.0" }
croncat-sdk-manager = { version = "1.0.0" }
anyhow = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
cw-utils = { workspace = true }
