[package]
name = "croncat-manager"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
croncat-sdk-manager = { workspace = true }
croncat-sdk-agents = { workspace = true }
croncat-sdk-tasks = { workspace = true }
croncat-sdk-core = { workspace = true }
cw-utils = { workspace = true }
croncat-factory = { workspace = true, features = ["library"] }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
mod-sdk = { workspace = true }
serde-json-wasm = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
croncat-factory = { workspace = true }
croncat-sdk-factory = { workspace = true }
croncat-tasks = { workspace = true }
croncat-agents = { workspace = true }
croncat-mod-balances = { workspace = true }
croncat-mod-generic = { workspace = true }