[package]
name = "croncat-manager"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmwasm-schema = { workspace = true }
croncat-sdk-manager = { workspace = true }
croncat-sdk-agents = { workspace = true }
croncat-sdk-tasks = { workspace = true }
croncat-sdk-core = { workspace = true }
cw-utils = { workspace = true }
croncat-sdk-factory = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
mod-sdk = { workspace = true }
serde-json-wasm = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
croncat-factory = { workspace = true }
croncat-sdk-factory = { workspace = true }
croncat-tasks = { workspace = true }
croncat-agents = { workspace = true }
croncat-mod-balances = { workspace = true }
croncat-mod-generic = { workspace = true }
cw-boolean-contract = { workspace = true }