[package]
name = "croncat-tasks"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }
croncat-sdk-tasks = { workspace = true }
cw-storage-plus = { workspace = true }
cw20 = { workspace = true }
cw2 = { workspace = true }

croncat-factory = { workspace = true, features = ["library"] }
croncat-sdk-core = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
croncat-factory = { workspace = true }
