[package]
name = "cw-croncat"
version = "0.0.1"
authors = ["meow@cron.cat", "@tjtc"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
staking = ["cw-multi-test/staking"]
stargate = ["cw-multi-test/stargate"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cw-croncat-core = { version = "0.1.0", path = "../../packages/cw-croncat-core" }
cosmwasm-std = { version = "1.0.0", features = ["staking", "stargate"] }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13"
cron_schedule = "0.2.2"
cw2 = "0.13"
cw20 = { version = "0.13" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
hex = "0.4"
sha2 = "0.9"


[dev-dependencies]
cw-multi-test = { version = "0.13", features = ["staking"] }
cw20-base = { version = "0.13", features = ["library"] }
anyhow = "1"
