[package]
name = "cw-croncat"
version = "0.0.3"
authors = ["meow@cron.cat", "@tjtc", "@mikedotexe"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
staking = ["cw-multi-test/staking"]
stargate = ["cw-multi-test/stargate"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cw-croncat-core = { version = "0.1.3", path = "../../packages/cw-croncat-core" }
cw-rules-core = { version = "0.1.2", path = "../../packages/cw-rules-core" }
cosmwasm-std = { version = "1.0.0", features = ["staking", "stargate"] }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.16.0"
cw-utils = "0.13"
cron_schedule = "0.2.2"
cw2 = "0.16.0"
cw20 = { version = "0.13.4", default-features = false }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
hex = "0.4"
sha2 = "0.10.6"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0" }
cw-rules = { version = "*", path = "../cw-rules" }
cw-multi-test = { version = "0.16.0", features = ["staking"] }
cw20-base = { version = "0.13.4", features = ["library"] }
cw4 = { version = "0.13.4" }
cw4-group = { version = "0.13.4", features = ["library"] }
smart-query = { version = "*", path = "../../packages/smart-query" }
generic-query = { version = "*", path = "../../packages/generic-query" }
cwd-voting-cw20-staked = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cw20-stake = { version = "0.2.6", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-core = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-interface = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-proposal-single = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-voting = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }
