[package]
name = "cw-croncat"
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
staking = ["cw-multi-test/staking"]
stargate = ["cw-multi-test/stargate"]

[package.metadata.scripts]
optimize = { workspace = true }

[dependencies]
cw-croncat-core = { workspace = true }
cw-rules-core = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking", "stargate"] }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true, default-features = false }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-rules = { workspace = true }
cw-multi-test = { workspace = true, features = ["staking"] }
cw20-base = { workspace = true, features = ["library"] }
cw4 = { workspace = true }
cw4-group = { workspace = true, features = ["library"] }
smart-query = { workspace = true }
generic-query = { workspace = true }
dao-voting-cw20-staked = { workspace = true }
cw20-stake = { workspace = true }
dao-core = { workspace = true }
dao-interface = { workspace = true }
dao-proposal-single = { workspace = true }
dao-voting = { workspace = true }
rusty-hook = { workspace = true }
