[package]
name = "cw-rules"
version = "0.0.1"
authors = ["meow@cron.cat", "@tjtc"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
staking = ["cw-multi-test/staking"]
stargate = ["cw-multi-test/stargate"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cw-croncat-core = { version = "0.1.0", path = "../../packages/cw-croncat-core" }
generic-query = { version = "0.1.0", path = "../../packages/generic-query" }
cw-rules-core = { version = "*", path = "../../packages/cw-rules-core"}
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw-utils = "0.13"
cw2 = "0.13.2"
cw721 = "0.13.2"
cw721-base = "0.13.2"
cw20 = "0.13"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw4 = "0.14.0"
cw4-group = "0.14.0"
base64 = "0.13"
voting = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
# This thing saved our lives thanks @hashedone for implementing it
serde-cw-value = "0.7.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.2"
cw-utils = "0.13"
cw20-base = "0.13"
# DAO contracts
voting = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cw-proposal-single = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cw-proposal-multiple = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cw20-staked-balance-voting = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cw20-stake = { version = "0.2.6", git = "https://github.com/DA0-DA0/dao-contracts" }
cw-core = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cw-core-interface = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
# Testing generic msg
cw4 = "0.14.0"
cw4-group = "0.14.0"
base64 = "0.13.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
