[package]
name = "cw-rules"
authors = { workspace = true }
version = { workspace = true }
description = "CronCat rules core logic for tasks that require conditions"
edition = { workspace = true }
documentation = { workspace = true }
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
staking = ["cw-multi-test/staking"]
stargate = ["cw-multi-test/stargate"]

[package.metadata.scripts]
optimize = { workspace = true }

[dependencies]
generic-query = { workspace = true }
smart-query = { workspace = true }
cw-rules-core = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }
# This thing saved our lives thanks @hashedone for implementing it
serde-cw-value = { workspace = true }
serde-json-wasm = { workspace = true }

[dev-dependencies]
cw721-base = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
cw-utils = { workspace = true }
cw20-base = { workspace = true }
# DAO contracts
cwd-voting = { workspace = true }
cwd-proposal-single = { workspace = true }
cwd-proposal-multiple = { workspace = true }
cwd-voting-cw20-staked = { workspace = true }
cw20-stake = { workspace = true }
cwd-core = { workspace = true }
cwd-interface = { workspace = true }
# Testing generic msg
cw4 = { workspace = true }
cw4-group = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
rusty-hook = { workspace = true }
