[package]
name = "croncat-balances"
version = "0.1.0"
authors = []
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-multi-test = { workspace = true }
cw-utils = { workspace = true }
mod-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
