[package]
name = "croncat-mod-balances"
version = "1.0.0"
authors = { workspace = true }
edition = "2021"
repository = "https://github.com/CronCats/cw-croncat"
license = { workspace = true }
description = "Allows querying CosmWasm balances, helpful when making CronCat tasks with queries."

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
mod-sdk = { workspace = true }

[dev-dependencies]
cw20-base = { workspace = true }
cw-multi-test = { workspace = true }
cw-utils = { workspace = true }
